--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 futures-timer = "3.0.3"
 clap = { version = "4.5.17", features = ["derive"] }
 tracing = "0.1.40"
+futures = "0.3.30"
