--- a/kad_new/Cargo.toml
+++ b/kad_new/Cargo.toml
@@ -15,3 +15,4 @@ clap = { version = "4.5.17", features = ["derive"] }
 tracing = "0.1.40"
 futures = "0.3.30"
 async-std = { version = "1.13.0", features = ["attributes"] }
+libp2p-stream = "0.2.0-alpha"
