--- a/kad_new/Cargo.toml
+++ b/kad_new/Cargo.toml
@@ -16,3 +16,4 @@ tracing = "0.1.40"
 futures = "0.3.30"
 async-std = { version = "1.13.0", features = ["attributes"] }
 libp2p-stream = "0.2.0-alpha"
+serde_json = "1.0.128"
