--- a/kademlia_node/Cargo.toml
+++ b/kademlia_node/Cargo.toml
@@ -17,3 +17,4 @@ futures = "0.3.30"
 async-std = { version = "1.13.0", features = ["attributes"] }
 libp2p-stream = "0.2.0-alpha"
 serde_json = "1.0.128"
+serde = { version = "1.0.210", features = ["derive"] }
