--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [workspace]
 members = [
-    "btc_miner",
+    "btc_miner", "file_transfer",
     "http_server",
     "kademlia_node"
 ]
