--- a/file_transfer/Cargo.toml
+++ b/file_transfer/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-libp2p = { version = "0.54.1", features = ["async-std", "dns", "dcutr", "identify", "macros", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "yamux", "kad"] }
+libp2p = { version = "0.54.1", features = ["async-std", "dns", "dcutr", "identify", "macros", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "yamux", "kad", "request-response", "cbor"] }
 tokio = { version = "1.40.0", features = ["full"] }
 rand = "0.8.5"
 hex = "0.4.3"
