--- a/file_transfer/Cargo.toml
+++ b/file_transfer/Cargo.toml
@@ -18,3 +18,4 @@ async-std = { version = "1.13.0", features = ["attributes"] }
 libp2p-stream = "0.2.0-alpha"
 serde_json = "1.0.128"
 serde = { version = "1.0.210", features = ["derive"] }
+rusqlite = "0.32.1"
