--- a/file_transfer/Cargo.toml
+++ b/file_transfer/Cargo.toml
@@ -19,3 +19,4 @@ libp2p-stream = "0.2.0-alpha"
 serde_json = "1.0.128"
 serde = { version = "1.0.210", features = ["derive"] }
 rusqlite = "0.32.1"
+dirs = "5.0.1"
