--- a/file_transfer/Cargo.toml
+++ b/file_transfer/Cargo.toml
@@ -20,3 +20,4 @@ serde_json = "1.0.128"
 serde = { version = "1.0.210", features = ["derive"] }
 rusqlite = "0.32.1"
 dirs = "5.0.1"
+bitcoin = { version = "0.32.2", features = ["rand-std", "serde"] }
