--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [workspace]
 members = [
-    "btc_miner", "file_transfer",
-    "http_server",
+    "btc_miner",
+    "file_transfer",
     "kademlia_node"
 ]
 
