--- a/file_transfer/Cargo.toml
+++ b/file_transfer/Cargo.toml
@@ -19,6 +19,9 @@ libp2p-stream = "0.2.0-alpha"
 serde_json = "1.0.128"
 serde = { version = "1.0.210", features = ["derive"] }
 rusqlite = "0.32.1"
+#diesel = {version = "2.2.4", features = ["sqlite"]}
 dirs = "5.0.1"
 bitcoin = { version = "0.32.2", features = ["rand-std", "serde"] }
 rocket = "0.5.1"
+data-encoding = "2.6.0"
+ring = "0.17.8"
