--- a/file_transfer/Cargo.toml
+++ b/file_transfer/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 libp2p = { version = "0.54.1", features = ["async-std", "dns", "dcutr", "identify", "macros", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "yamux", "kad", "request-response", "cbor"] }
+libp2p-swarm = "0.45.1"
 tokio = { version = "1.40.0", features = ["full"] }
 rand = "0.8.5"
 hex = "0.4.3"
@@ -25,3 +26,4 @@ bitcoin = { version = "0.32.2", features = ["rand-std", "serde"] }
 rocket = { version = "0.5.1", features = ["json"] }
 data-encoding = "2.6.0"
 ring = "0.17.8"
+bincode = {version = "1.3.2"}
