--- a/file_transfer/Cargo.toml
+++ b/file_transfer/Cargo.toml
@@ -20,7 +20,6 @@ libp2p-stream = "0.2.0-alpha"
 serde_json = "1.0.128"
 serde = { version = "1.0.210", features = ["derive"] }
 rusqlite = "0.32.1"
-#diesel = {version = "2.2.4", features = ["sqlite"]}
 dirs = "5.0.1"
 bitcoin = { version = "0.32.2", features = ["rand-std", "serde"] }
 rocket = { version = "0.5.1", features = ["json"] }
@@ -28,3 +27,4 @@ data-encoding = "2.6.0"
 ring = "0.17.8"
 bincode = {version = "1.3.2"}
 uuid = { version = "1.11.0", features = ["v4"] }
+diesel = { version = "2.2.4", features = ["sqlite"] }
