--- a/file_transfer/Cargo.toml
+++ b/file_transfer/Cargo.toml
@@ -25,7 +25,12 @@ bitcoin = { version = "0.32.2", features = ["rand-std", "serde"] }
 rocket = { version = "0.5.1", features = ["json"] }
 data-encoding = "2.6.0"
 ring = "0.17.8"
-bincode = {version = "1.3.2"}
+bincode = { version = "1.3.2" }
 uuid = { version = "1.11.0", features = ["v4"] }
 diesel = { version = "2.2.4", features = ["sqlite"] }
 chrono = "0.4.38"
+bytes = "1.8.0"
+hyper = { version = "1.5.0", features = ["server", "http1"] }
+hyper-tls = "0.6.0"
+http-body-util = "0.1.2"
+hyper-util = { version = "0.1.9", features = ["http1"] }
