--- a/file_transfer/Cargo.toml
+++ b/file_transfer/Cargo.toml
@@ -35,3 +35,4 @@ hyper-tls = "0.6.0"
 http-body-util = "0.1.2"
 hyper-util = { version = "0.1.9", features = ["http1"] }
 hyper-http-proxy = "1.0.0"
+headers = "0.4.0"
