--- a/orca_node/Cargo.toml
+++ b/orca_node/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "file_transfer"
+name = "orca_node"
 version = "0.1.0"
 edition = "2021"
 
@@ -37,3 +37,4 @@ hyper-util = { version = "0.1.9", features = ["http1"] }
 hyper-http-proxy = "1.0.0"
 headers = "0.4.0"
 tokio-util = "0.7.12"
+serde_yaml = "0.9.33"
