cli changes, docs changes

--- a/sample_config.json
+++ b/sample_config.json
@@ -1,6 +1,7 @@
 {
   "AppDataPath": "/Users/sethu/Documents/orcanet",
   "BTCAddress": "bcrt1qfpwdt4untdxya2kxw7hce496e76nkrmkpff3ym",
+  "BTCWalletName": "bob",
   "DBPath": "/Users/sethu/sqlite_dbs/orcanet_db.db",
   "FileFeeRatePerKB": 0.0025,
   "NetworkType": "RegTest",
