--- a/orca_node/src/assets/default_config.json
+++ b/orca_node/src/assets/default_config.json
@@ -1,9 +1,10 @@
 {
-  "AppDataPath": "~/Downloads",
+  "AppDataPath": "<MUST BE MODIFIED DURING SETUP>",
   "BTCAddress": "<MUST BE MODIFIED DURING SETUP>",
   "DBPath": "<MUST BE MODIFIED DURING SETUP>",
   "FileFeeRatePerKB": 0.0025,
-  "NetworkType": "RegTest",
+  "ProxyFeeRatePerKB": 0.0025,
+  "NetworkType": "MainNet",
   "ProxyConfig": null,
   "RunHTTPServer": true,
   "SecretKeySeed": 6
