--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 edition = "2021"
 
 [workspace]
-members = [ "crates/boot_node",
-    "crates/orca_node",
-    "crates/relay_server"
+members = ["bin/boot_node",
+    "bin/orca_node",
+    "bin/relay_server"
 ]
 
 workspace.resolver = "1"
